plugins {
	id 'org.springframework.boot' version '2.4.1'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
	id 'com.google.cloud.tools.jib' version '2.7.0'
}

group = 'com.movieactors'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
	maven {
		url = uri("https://repo.spring.io/milestone")
	}
}


dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.0-M6"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	compile 'javax.persistence:javax.persistence-api:2.2'

	compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.1'
	compile 'com.h2database:h2:1.4.200'

	/*implementation("org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j")
	compile('org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j')

	implementation 'org.springframework.cloud:spring-cloud-starter-hystrix'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}*/


}

test {
	useJUnitPlatform()
}

jib {
    from {
        image = "adoptopenjdk/openjdk11:jre-11.0.9.1_1-debianslim"
    }
    to {
        image = "actors"
    }
    container {
        jvmFlags = listOf("--enable-preview")
        ports = listOf("9090")
    }
}
